# Drone-Flight-Controller

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  compile_commands.json  my-hex.hex  my_interface.py  pid_values.json  pid_values2.json  requirements.txt
.cache/clangd/index/: ant_stack_handler_types.h.2C660CDB1142D6F2.idx  app_button.h.55779F8BA8C32951.idx  app_error.h.9DD270202A9B11EE.idx  app_timer.h.63F777DD4813C7E1.idx  ble.h.2D9787C4D8B2CDAB.idx  (+58 more)
ble-c-extern/: Cargo.toml  build.rs
ble-c-extern/main_include/: ble_app.h
ble-c-extern/src/: ble_app.c
ble_setup/: Makefile
ble_setup/ble_app_uart/: main.c  main.h
dronecode/: Cargo.toml  build.rs
dronecode/src/: calibration_state.rs  communication_test.rs  control.rs  control_trait.rs  fsm_manual_mode.rs  fsm_panic_mode.rs  fsm_safe_mode.rs  full_control_logic.rs  lib.rs  main.rs  main_loop.rs  sensor_state.rs  telemetry_data.rs  telemetry_read.rs  wireless_setup.rs  yaw_pitch_roll.rs
dronecode/src/filters/: butterworth_filter.rs  dmp_readings.rs  kalman_filter.rs  mod.rs  pressure_filter.rs  sensors_handler.rs
dronecode/src/states/: FSM_control_trait.rs  calibration_mode.rs  fsm_base_class.rs  fsm_control_trait.rs  full_control.rs  height_control.rs  manual_mode.rs  mod.rs  panic_mode.rs  raw_sensor_full_control.rs  safe_mode.rs  state_context.rs  wireless_mode.rs  yaw_control.rs
dronecode/src/states/state_structures/: calibration_state.rs  mod.rs  state_context.rs
dronecode/src/util/: approx_funcs.rs  axis.rs  ble_communication.rs  constants_file.rs  mod.rs  pid_controller.rs  rpm_calculator.rs  wireless_radio_setup.rs  yaw_pitch_roll.rs
my-hdlc/: Cargo.toml
my-hdlc/src/: command.rs  lib.rs  pc_command.rs  telemetry_data.rs
runner/: Cargo.toml
runner/src/: bluetooth.rs  downlink_comm.rs  main.rs  my_interface.py  read_joystick.rs  read_keyboard.rs  runner_context.rs  uplink_comm.rs  uplink_ui.rs
tudelft-quadrupel/: Cargo.toml  build.rs
tudelft-quadrupel/src/: initialize.rs  lib.rs  motor.rs  time.rs
ui/: data.py  data_class.py  main.py  read_data.py  set_up.py  states.py  update_gui.py  update_time_diagrams.py  visualize.py
ui/drone_visualization/: visualize.py
ui/read_data/: read_data.py
ui/set_up_ui/: general_info.py  set_up.py  set_up_live_feed.py  set_up_logged_feed.py  set_up_loop_timing.py  set_up_message_log.py  set_up_pid.py  set_up_sensors.py
ui/update_ui/: update_gui.py  update_sensors.py  update_time_diagrams.py
ui/util/: data.py  states.py
ui/write_data/: writer.py
(+21 files in other folders)
