[package]
name = "template-project"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.16"
micromath = "2"
postcard = "1.1.3"
[target.'cfg(target_arch = "arm")'.dependencies]

micromath = "2"
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
nalgebra = { version = "0.34", default-features = false, features = ["libm"]}
fixed = {version = "1.31.0"}
cordic = {version = "0.1.5"}
my-hdlc = {path = "../my-hdlc/"}
tudelft-quadrupel = {path="../tudelft-quadrupel/"}
# ble-c-extern = {path="../ble-c-extern/"}
