[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tudelft-serial-upload = "2"
crossterm = "0.29.0"
evdev = "0.13.2"
rand = "0.10.0"
serde_json = "1.0.149"
btleplug = {version="0.12.0"}
tokio = {version="1.50.0", features= ["full"]}
uuid = {version="1", features= ["v4"]}
futures = "0.3"

my-hdlc = {path = "../my-hdlc/", features = ["pc"]}
